k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-backend
  namespace: realtime-spotify
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: spotify-backend
  template:
    metadata:
      labels:
        app: spotify-backend
    spec:
      containers:
        - name: backend
          image: 665871827975.dkr.ecr.us-east-2.amazonaws.com/spotify-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: spotify-backend
  namespace: realtime-spotify
spec:
  selector:
    app: spotify-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
